--- a/alfa_agent/data/conf/agent.ini
+++ b/alfa_agent/data/conf/agent.ini
@@ -4,4 +4,4 @@ server_url=http://localhost:8080/alfa/agent/
 
 [AGENT]
 send_sysinfo_on_startup=False
-
+messaging_id=74f5386b-886f-5dc0-ac5b-7570ccd62146
