--- a/alfa_agent/data/conf/agent.ini
+++ b/alfa_agent/data/conf/agent.ini
@@ -1,7 +1,6 @@
 [CONNECTION]
 agent_port=8484
-server_url=http://localhost:8080/alfa/agent/
+server_url=http://192.168.1.196:8080/alfa/agent/
 
 [AGENT]
-send_sysinfo_on_startup=False
-messaging_id=74f5386b-886f-5dc0-ac5b-7570ccd62146
+send_sysinfo_on_startup=True
