--- a/alfa_agent/data/conf/agent.ini
+++ b/alfa_agent/data/conf/agent.ini
@@ -1,6 +1,6 @@
 [CONNECTION]
-agent_port=8484
-server_url=http://192.168.1.196:8080/alfa/agent/
+agent_port = 8484
+server_url = http://192.168.1.196:8080/alfa/agent/
 
 [AGENT]
-send_sysinfo_on_startup=True
+send_sysinfo_on_startup = False
