--- a/alfa_agent/data/conf/logging.yaml
+++ b/alfa_agent/data/conf/logging.yaml
@@ -3,7 +3,8 @@ version: 1
 disable_existing_loggers: False
 formatters:
     simple:
-        format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+        format: "[%(asctime)s] %(levelname)s [%(name)s.%(funcName)s:%(lineno)d] %(message)s"
+        datefmt: "%H:%M:%S"
 
 handlers:
     console:
@@ -31,12 +32,7 @@ handlers:
         encoding: utf8
 
 loggers:
-    alfa_agent:
-        level: ERROR
-        handlers: [console]
-        propagate: no
-
-root:
-    level: INFO
-    handlers: [console, info_file_handler, error_file_handler]
+    '':
+        level: DEBUG
+        handlers: [console, info_file_handler, error_file_handler]
 ...
