chown pid file to match the parent dir

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 *.pyc
 data/tmp/
 data/*.json
-alfa_agent/data/tmp/agent.pid
+alfa_agent/data/agent.pid
 alfa_agent/data/sys_info.json
 alfa_agent/conf/config.yaml
 
